# R-Type

./: .clang-format  .codecov.yml  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  _action_name_8hpp.html  _action_name_8hpp__dep__incl.map  _action_name_8hpp__dep__incl.md5  _action_name_8hpp__incl.map  _action_name_8hpp__incl.md5  _action_name_8hpp_source.html  _action_queue_component_8hpp.html  _action_queue_component_8hpp__dep__incl.map  _action_queue_component_8hpp__dep__incl.md5  _action_queue_component_8hpp__incl.map  _action_queue_component_8hpp__incl.md5  _action_queue_component_8hpp_source.html  _afk_frequency_component_8hpp.html  _afk_frequency_component_8hpp__dep__incl.map  _afk_frequency_component_8hpp__dep__incl.md5  _afk_frequency_component_8hpp_source.html  _allied_projectile_component_8hpp.html  _allied_projectile_component_8hpp__dep__incl.map  _allied_projectile_component_8hpp__dep__incl.md5  _allied_projectile_component_8hpp__incl.map  _allied_projectile_component_8hpp__incl.md5  _allied_projectile_component_8hpp_source.html  _allow_controller_component_8hpp.html  _allow_controller_component_8hpp__dep__incl.map  _allow_controller_component_8hpp__dep__incl.md5  _allow_controller_component_8hpp__incl.map  _allow_controller_component_8hpp__incl.md5  _allow_controller_component_8hpp_source.html  _allow_mouse_and_keyboard_component_8hpp.html  _allow_mouse_and_keyboard_component_8hpp__dep__incl.map  _allow_mouse_and_keyboard_component_8hpp__dep__incl.md5  (+2211 more)
AdminPanel/: AdminPanel.cpp  AdminPanel.hpp  CMakeLists.txt  main.cpp
Client/: ButtonAction.cpp  ButtonAction.hpp  CMakeLists.txt  Client.cpp  Client.hpp  ClientRoom.cpp  ClientRoom.hpp  UserConnection.cpp  UserConnection.hpp  main.cpp
Client/Components/: Controllable.hpp  NetworkServer.hpp  Networkable.hpp
Client/SFML_wrapper/Events/: CMakeLists.txt  Events.cpp  Events.hpp
Client/Systems/: CMakeLists.txt  SendToServer.cpp  SendToServer.hpp
Room/: CMakeLists.txt  Room.cpp  Room.hpp  main.cpp
Server/: ArgumentHandler.cpp  ArgumentHandler.hpp  CMakeLists.txt  Room.cpp  Room.hpp  RoomInstance.cpp  RoomInstance.hpp  Server.cpp  Server.hpp  main.cpp
Server/Components/: Client.hpp  NetworkClient.hpp  Networkable.hpp
Server/Room/: CMakeLists.txt  Room.cpp  Room.hpp
Server/Systems/: CMakeLists.txt  SendToClient.cpp  SendToClient.hpp
libs/: CMakeLists.txt
libs/ArgumentHandler/: ArgumentHandler.cpp  ArgumentHandler.hpp  CMakeLists.txt
libs/Communicator/: CMakeLists.txt  Client.cpp  Client.hpp  Communicator.cpp  Communicator.hpp  Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp  entrypoint.cpp  entrypoint.hpp
libs/Communicator/include/: entrypoint.hpp
libs/Database/: CMakeLists.txt  Database.cpp  Database.hpp
libs/ECS/: CMakeLists.txt
libs/ECS/Component/: CMakeLists.txt  Component.hpp
libs/ECS/Components/: BouncingComponent.hpp  ButtonComponent.hpp  CMakeLists.txt  CollidableComponent.hpp  Component.hpp  ControlableComponent.hpp  DamageComponent.hpp  DirectionComponent.hpp  EquipableComponent.hpp  HitboxSizeComponent.hpp  InvinsibleComponent.hpp  InvisibleComponent.hpp  LifeComponent.hpp  LifetimeComponent.hpp  MovementComponent.hpp  PatternComponent.hpp  ShootingFrequencyComponent.hpp  SizeComponent.hpp  VelocityComponent.hpp  (+2 more)
libs/Error/: CMakeLists.txt  Error.cpp  Error.hpp
libs/GameComponents/: AlliedProjectileComponent.hpp  BackGroundComponent.hpp  BouncingComponent.hpp  BreakThroughtComponent.hpp  BreakthroughtComponent.hpp  ButtonComponent.hpp  CMakeLists.txt  ChargedAttackComponent.hpp  CollidableComponent.hpp  ControlableComponent.hpp  DamageComponent.hpp  DamageRadiusComponent.hpp  DeathComponent.hpp  DeathDamageComponent.hpp  DestinationComponent.hpp  DirectionComponent.hpp  EnemyComponent.hpp  EnemyProjectileComponent.hpp  EquipableComponent.hpp  EquipmentComponent.hpp  InvinsibleComponent.hpp  InvisibleComponent.hpp  LifeComponent.hpp  LifeTimeComponent.hpp  LifetimeComponent.hpp  NewlyCreated.hpp  ObstacleComponent.hpp  PatternComponent.hpp  PlayerComponent.hpp  PositionComponent.hpp  ProjectileAllyComponent.hpp  ProjectileComponent.hpp  ProjectileEnemyComponent.hpp  ShootingFrequencyComponent.hpp  SizeComponent.hpp  Uuid.hpp  VelocityComponent.hpp  WeaknessComponent.hpp  WeightComponent.hpp
libs/GameSharedResources/: CMakeLists.txt  GameClock.cpp  GameClock.hpp  Random.hpp
libs/GameSystems/: CMakeLists.txt  CollidableSystem.cpp  CollidableSystem.hpp  DeathLifeSystem.hpp  DeathLifeTimeSystem.hpp  DeathSystem.hpp  DecreaseLifeTimeSystem.hpp  EnemiesGoRandom.cpp  EnemiesGoRandom.hpp  EnemyShootSystem.cpp  EnemyShootSystem.hpp  LifeTimeDeathSystem.hpp  MouvementSystem.cpp  MouvementSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  UpdateClockSystem.cpp  UpdateClockSystem.hpp
libs/GraphicECS/: CMakeLists.txt
libs/LibsClient/: CMakeLists.txt
libs/R-TypeLogic/: CMakeLists.txt
libs/SFMLComponents/: ActionQueueComponent.hpp  AllowControllerComponent.hpp  CMakeLists.txt  Controller.hpp  ControllerButtonInputComponent.hpp  ControllerInputComponent.hpp  ControllerJoystickInputComponent.hpp  ECSActions.hpp  GraphicsFontComponent.hpp  GraphicsRectangleComponent.cpp  GraphicsRectangleComponent.hpp  GraphicsTextComponent.cpp  GraphicsTextComponent.hpp  GraphicsTextureComponent.hpp  KeyboardInputComponent.hpp  LayerLvL.hpp  MouseInputComponent.hpp  ParallaxComponent.hpp  TextureName.hpp
libs/SFMLResource/: CMakeLists.txt  GraphicsFontResource.hpp  GraphicsTextureResource.cpp  GraphicsTextureResource.hpp  RenderWindowResource.hpp
libs/SFMLSystems/: CMakeLists.txt  DrawComponents.cpp  DrawComponents.hpp  InputManagement.cpp  InputManagement.hpp  ParallaxSystem.cpp  SfRectangleFollowEntitySystem.cpp  SfRectangleFollowEntitySystem.hpp
libs/Transisthor/: CMakeLists.txt  Transisthor.cpp  Transisthor.hpp
libs/TransisthorECSLogic/: CMakeLists.txt
tests/: CMakeLists.txt  R-Type_communicator_switch_tests  R-Type_sender_tests  R-type_sender_tests
tests/functionnal/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  very_basic_test.cpp
(+1962 files in other folders)
