add_subdirectory(Communicator)
add_subdirectory(ECS)
add_subdirectory(Error)
add_subdirectory(Transisthor)
add_subdirectory(GameComponents)
add_subdirectory(GameSystems)
add_subdirectory(GameEntityManipulation)
add_subdirectory(ArgumentHandler)
add_subdirectory(SFMLComponents)
add_subdirectory(SFMLSystems)